<resources>
    <string name="app_name">FinControlApp</string>
    <string name="app_name_main">FinControl</string>
    <string name="logo">Logo</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="btn_register">Registrar</string>
    <string name="btn_login">Login</string>
    <string name="welcome_main_text">Bem-vindo! Este aplicativo foi feito para que você possa gerir sua Micro Empresa</string>
    <string name="welcome_text">Bem-vindo</string>
    <string name="hint_password">● ● ● ● ● ● ● ● ● ● ● ●</string>
    <string name="field_password_text">Password</string>
    <string name="hint_email_text">example@example.com</string>
    <string name="field_login_text">Login</string>
    <string name="name_field">Nome</string>
    <string name="email_field">Email</string>
    <string name="document_field">CPF/CNPJ</string>
    <string name="password_field">Senha</string>
    <string name="document_hint_text">99.999.999/0001-99</string>
    <string name="return_login_btn">Ja tem uma conta? Log In</string>
    <string name="confirm_password_field">Confirme sua senha</string>
    <string name="recover_password_text">Recuperar senha</string>
    <string name="email_hint">Digite seu e-mail</string>
</resources>