<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="left"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_field"
                android:textSize="14sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:paddingLeft="40dp"/>

            <EditText
                android:id="@+id/name_text"
                android:layout_width="350dp"
                android:layout_height="45dp"
                android:background="@drawable/field_login"
                android:padding="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginHorizontal="40dp"
                android:textColorHint="@color/hint_field_text"
                android:textColor="@color/black_app" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_field"
                android:textSize="14sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:paddingLeft="40dp"/>

            <EditText
                android:id="@+id/email_text"
                android:layout_width="350dp"
                android:layout_height="45dp"
                android:background="@drawable/field_login"
                android:padding="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginHorizontal="40dp"
                android:hint="@string/hint_email_text"
                android:textColorHint="@color/hint_field_text"
                android:textColor="@color/black_app" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/document_field"
                android:textSize="14sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:paddingLeft="40dp"/>

            <EditText
                android:id="@+id/document_text"
                android:layout_width="350dp"
                android:layout_height="45dp"
                android:background="@drawable/field_login"
                android:padding="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginHorizontal="40dp"
                android:hint="@string/document_hint_text"
                android:textColorHint="@color/hint_field_text"
                android:textColor="@color/black_app" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_field"
                android:textSize="14sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:paddingLeft="40dp"/>

            <EditText
                android:id="@+id/password_text"
                android:layout_width="350dp"
                android:layout_height="45dp"
                android:background="@drawable/field_login"
                android:hint="@string/hint_password"
                android:padding="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginHorizontal="40dp"
                android:inputType="textPassword"
                android:textColorHint="@color/hint_field_text"
                android:textColor="@color/black_app" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password_field"
                android:textSize="14sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:paddingLeft="40dp"/>

            <EditText
                android:id="@+id/confirm_password_text"
                android:layout_width="350dp"
                android:layout_height="45dp"
                android:background="@drawable/field_login"
                android:hint="@string/hint_password"
                android:padding="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginHorizontal="40dp"
                android:inputType="textPassword"
                android:textColorHint="@color/hint_field_text"
                android:textColor="@color/black_app" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingBottom="20dp">

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="207dp"
                    android:layout_height="48dp"
                    android:text="@string/btn_register"
                    android:fontFamily="sans-serif-black"
                    android:textSize="20sp"
                    android:backgroundTint="@color/main_dark_blue"
                    android:textColor="@color/btn_black"
                    android:layout_marginTop="30dp"/>

                <TextView
                    android:id="@+id/return_login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/return_login_btn"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>