<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <!-- Conteúdo do formulário dentro de um ScrollView -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="left"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_login_text"
                android:textSize="14sp"
                android:textColor="#000000"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:paddingLeft="40dp"/>

            <EditText
                android:id="@+id/login_text"
                android:layout_width="350dp"
                android:layout_height="45dp"
                android:background="@drawable/field_login"
                android:hint="@string/hint_email_text"
                android:padding="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginHorizontal="40dp"
                android:textColorHint="@color/hint_field_text"
                android:textColor="@color/black_app" />

            <!-- Alinha com o texto do EditText -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_password_text"
                android:textSize="14sp"
                android:textColor="#000000"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:paddingLeft="40dp"/>

            <EditText
                android:id="@+id/password_text"
                android:gravity="left"
                android:layout_width="350dp"
                android:layout_height="45dp"
                android:background="@drawable/field_login"
                android:hint="@string/hint_password"
                android:padding="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginHorizontal="40dp"
                android:inputType="textPassword"
                android:textColorHint="@color/hint_field_text"
                android:textColor="@color/black_app"
                tools:ignore="TextFields"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingBottom="20dp">

                <!-- Botão de Login -->
                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="207dp"
                    android:layout_height="48dp"
                    android:text="@string/btn_login"
                    android:fontFamily="sans-serif-black"
                    android:textSize="20sp"
                    android:backgroundTint="@color/main_dark_blue"
                    android:textColor="@color/btn_black"
                    android:layout_marginTop="30dp"/>

                <!-- Esqueceu a Senha -->
                <TextView
                    android:id="@+id/forgot_password_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_forgot_password"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginTop="50dp">

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="207dp"
                        android:layout_height="50dp"
                        android:text="@string/btn_register"
                        android:fontFamily="sans-serif-black"
                        android:textSize="20sp"
                        android:backgroundTint="@color/light_blue"
                        android:textColor="@color/btn_black"
                        android:gravity="center"/>

                    <!-- Link de Cadastro -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Don't have an account? Sign Up"
                        android:textSize="14sp"
                        android:textColor="#00AEEF"
                        android:layout_marginTop="8dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
