<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="left"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_field"
                android:textSize="14sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:paddingLeft="40dp"/>

            <EditText
                android:id="@+id/email_text"
                android:layout_width="350dp"
                android:layout_height="45dp"
                android:background="@drawable/field_login"
                android:padding="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginHorizontal="40dp"
                android:textColorHint="@color/hint_field_text"
                android:hint="@string/email_hint"
                android:textColor="@color/black_app" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingBottom="20dp">

                <!-- Botão de Login -->
                <Button
                    android:id="@+id/btn_recover_password"
                    android:layout_width="207dp"
                    android:layout_height="48dp"
                    android:text="@string/recover_password_text"
                    android:fontFamily="sans-serif-black"
                    android:textSize="20sp"
                    android:backgroundTint="@color/main_dark_blue"
                    android:textColor="@color/btn_black"
                    android:layout_marginTop="30dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>